# spec-kit-tw

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  TERMINOLOGY.md  TRANSLATION_STANDARDS.md  pyproject.toml  spec-driven.md
.claude/: settings.local.json
.claude/commands/: translation-auto.md  translation-detect.md  translation-execute.md  translation-fix.md  translation-qa.md  translation-review.md  translation-sync.md  translation-workflow.md
.devcontainer/: post-create.sh
.github/workflows/: release.yml
.github/workflows/scripts/: create-github-release.sh  create-release-packages.sh
docs/: README.md  docfx.json  index.md  installation.md  local-development.md  quickstart.md  upgrade.md
memory/: constitution.md
src/specify_cli/: __init__.py
templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
templates/commands/: analyze.md  checklist.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md  taskstoissues.md
